fixed mongo routes and user crud methods
