# src/dtos/users.dto.ts
@@ -1,9 +1,18 @@
 import { IsString } from 'class-validator';
+import { UserType } from '@/enums/userType.enum';
 
 export class CreateUserDto {
   @IsString()
   public nickname: string;
-
   @IsString()
-  public _id: string;
+  public password: string;
+  public userType: UserType;
+}
+
+export class UpdateUserDto {
+  @IsString()
+  public nickname: string;
+  @IsString()
+  public password: string;
+  public userType: UserType;
 }
