# src/enums/userType.enum.ts
@@ -1,0 +1,4 @@
+export enum UserType {
+  admin,
+  regular,
+}
