# src/models/users.model.ts
@@ -1,29 +1,20 @@
 import { model, Schema, Document } from 'mongoose';
 import { User } from '@interfaces/users.interface';
-import { UserMessage } from '@interfaces/user-message.interface';
+import { UserType } from '@/enums/userType.enum';
 
 const userSchema: Schema = new Schema({
-  id: {
-    type: Date,
-    require: true,
-    unique: true,
-  },
-  scenario_id: {
-    type: Date,
-    require: true,
-    unique: false, // it is not unique per user.
-  },
   nickname: {
     type: String,
     require: true,
   },
-  scenario_start_time: {
-    type: Date,
-    required: true,
+  password: {
+    type: String,
+    require: true,
   },
-  messages: {
-    type: [], // Array of UserMessage
-    require: false, // might be null if user sent nothing.
+  userType: {
+    type: String,
+    enum: UserType,
+    require: true,
   },
 });
 
